# source-diversity-stopping

./: .gitignore  README.md  pyproject.toml  results.tsv
convergence_retrieval/: __init__.py  retriever.py
examples/: demo.py  navigation_demo.py
experiments/: collect_trajectories.py  run_2wiki.py  run_ablations.py  run_answer_stability_eval.py  run_bright.py  run_codebase_nav.py  run_confidence_gated_bright.py  run_confidence_gated_eval.py  run_confidence_gated_n500.py  run_cross_encoder_eval.py  run_decomposition_eval.py  run_e2e_n500.py  run_embedding_router_eval.py  run_fever.py  run_full_hotpotqa.py  run_heterogeneous_benchmark.py  run_heterogeneous_v2.py  run_hotpotqa_baselines.py  run_learned_stopping.py  run_multiseed.py  run_nli_stopping_eval.py  run_open_domain.py  run_structural_improvements.py  run_structural_nav.py  run_tool_execution.py  train_stopping_model.py
paper/: 00-abstract.md  01-introduction.md  02-related-work.md  03-methodology.md  04-experimental-setup.md  05-results.md  06-discussion.md  06a-root-cause-analysis.md  07-conclusion.md  appendix-a-formal-framework.md  full-paper.md
prompts/: experiment-implementer.md  literature-searcher.md  paper-reviewer.md  results-analyzer.md  section-writer.md  theory-reviewer.md
research-log/: 000-setup.md  001-literature-review.md  002-hypothesis.md  003-poc-substrate-switching.md  004-experiment-plan.md  004a-exp-hotpotqa-baselines.md  004b-exp-heterogeneous-benchmark.md  004c-exp-heterogeneous-benchmark-v2.md  004d-exp-ablation-study.md  005-analysis-iter-0.md  006-paper-review.md  (+2 more)
(+88 files in other folders)
